# pc-tracker-

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  FocusOS_Master_Build_Prompt.md  LICENSE  PROJECT_ANALYSIS.md  ROADMAP.md  SECURITY.md  implementation_plan.md  package-lock.json  package.json  readme.md  start.bat
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
apps/desktop/: package.json  vite.config.ts
apps/desktop/src/: App.tsx  Applications.tsx  Dashboard.tsx  Statistics.tsx  Timeline.tsx  index.css  main.tsx
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/src/: collector_service.rs  commands.rs  lib.rs  main.rs
docs/: architecture.md  coding-standards.md  collector.md  database-design.md  event-flow.md  frontend.md  getting-started.md  session-manager.md
rust/collector/: Cargo.toml
rust/collector/src/: lib.rs
rust/database/: Cargo.toml
rust/database/migrations/: 20240715000001_initial.sql  20240716000002_open_apps.sql
rust/database/src/: lib.rs
rust/idle/: Cargo.toml
rust/idle/src/: lib.rs
rust/session/: Cargo.toml
rust/session/src/: lib.rs
